--- a/index.html
+++ b/index.html
@@ -9,13 +9,93 @@
   <!-- KaTeX CDN，用于渲染数学公式（可选） -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css" crossorigin="anonymous">
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.js" crossorigin="anonymous"></script>
+  <style>
+    /* 全局盒模型，避免宽度计算导致溢出 */
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
+
+    .modes {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px;
+      align-items: center;
+    }
+
+    .modes label {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      margin: 0;
+    }
+
+    .modes input[type="radio"] {
+      margin: 0;
+      flex: 0 0 auto;
+    }
+
+    /* Tab 样式 */
+    .mode-tab {
+      appearance: none;
+      border: 1px solid #e2e8f0;
+      background: #fff;
+      padding: 8px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 14px;
+    }
+
+    .mode-tab[aria-selected="true"] {
+      background: #f1f5f9;
+      border-color: #cbd5e1;
+      box-shadow: 0 1px 0 rgba(0,0,0,0.02) inset;
+    }
+
+
+    /* 计算区域：普通文本允许换行，遇到超长内容（如 KaTeX 公式）时横向滚动显示完整内容 */
+    #calcArea {
+      max-width: 100%;
+      overflow-x: auto; /* 整个计算区域在必要时横向滚动 */
+      -webkit-overflow-scrolling: touch;
+    }
+
+    #calcSteps {
+      max-width: 100%;
+      overflow-x: auto; /* 允许内部横向滚动以显示完整公式 */
+      -webkit-overflow-scrolling: touch;
+      white-space: normal; /* 普通文本可换行 */
+      word-wrap: break-word;
+    }
+
+    /* KaTeX 渲染区域：防止逐字断行，单独横向滚动公式内容 */
+    .katex, .katex-display {
+      display: inline-block; /* 保持为行内块，随文本流布局 */
+      white-space: nowrap;    /* 不在公式内部逐字换行 */
+      max-width: none;
+      overflow: visible;
+    }
+
+    .katex * {
+      white-space: nowrap !important;
+    }
+
+    /* 一些浏览器滚动样式优化 */
+    #calcArea::-webkit-scrollbar, #calcSteps::-webkit-scrollbar {
+      height: 10px;
+    }
+
+    /* 避免整个页面在极窄视窗下出现最外层阻止收缩的问题 */
+    body, .card {
+      min-width: 0;
+    }
+  </style>
 </head>
 <body>
   <h1>Coffee Extraction Calculator — PoC</h1>
   <div class="card">
-    <div class="modes">
-      <label><input type="radio" name="mode" value="ratio" checked> 粉水比模式 (Dose / Brew Ratio)</label>
-      <label><input type="radio" name="mode" value="beverage"> 粉液比模式 (Dose / Beverage)</label>
+    <div class="modes" role="tablist" aria-label="模式选择">
+      <button class="mode-tab" role="tab" aria-selected="true" data-mode="ratio">粉水比模式 (Dose / Brew Ratio)</button>
+      <button class="mode-tab" role="tab" aria-selected="false" data-mode="beverage">粉液比模式 (Dose / Beverage)</button>
     </div>
 
     <div id="inputs">
